# traffic-scheduling

./: .gitignore  Dockerfile  README.md  colors.py  configuration-space.ipynb  imitation_learning.ipynb  jobshop.ipynb  manim_disj_graph.ipynb  manim_vehicles.ipynb  pyproject.toml  setup.py
finite-buffers/: pyproject.toml  simple.py  try.py
finite-buffers/tests/: test_simple.py
motion/: MotionSynthesize.ipynb  animation.py  casadi.ipynb  direct_transcription.py  direct_transcription_delay.ipynb  direct_transcription_general.ipynb  explicit.ipynb  explicit_direct_approach.ipynb  explicit_schedule_time_approach.ipynb  joining_parts.ipynb  motion.py  testing.ipynb  trajectory_test.ipynb
network/: animation.ipynb  automaton.py  basics.ipynb  basics.py  comparison.ipynb  exact.ipynb  exact.py  exact_online.py  generate.py  generate_network.py  imitation_learning.ipynb  presentation.ipynb  (+6 more)
network-editor/: README.md  package-lock.json  package.json  work.org
single-intersection/: .gitignore  Dockerfile  README.md  Snakefile  analysis.py  compare.py  comparison.py  dqn.py  eval_dqn.py  eval_ppo.py  eval_simple.py  exact.py  expert_demonstration.py  generate.py  plot.py  ppo.py  pyproject.toml  train.py  train_dqn.py  train_dqntest.py  visualize_schedule.py
single-intersection/env/single_intersection_gym/: env.py
single-intersection/envs/: base.yaml  pytorch.yaml
single-intersection/exps/: spec1.csv  spec2.csv
single-intersection/instances/: generate.py  generate_instances.py
single-intersection/tests/: test_env.py  test_exact.py  test_expert_demonstration.py
(+301 files in other folders)
