[tool.poetry]
name = "finite-buffers"
version = "0.1.0"
description = ""
authors = ["Jeroen van Riel <jeroenvanriel@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.4"
gurobipy = "^11.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
