[tool.poetry]
name = "traffic-scheduling"
version = "0.1.0"
description = ""
authors = ["Jeroen van Riel <jeroenvanriel@outlook.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
tensorboard = "^2.10.0"
gymnasium = ">=0.28.1"
tyro = "^0.5.10"
torch = ">=1.12.1"
stable-baselines3 = "^2.2.1"
gurobipy = "^11.0.0"
tqdm = "^4.66.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
